[project]
name = "piplup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.34.0",
]

[project.scripts]
piplup = "app.main:cli"

[tool.uv]
package = true
